--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <meta name="description" content="Discover Priyanshu Urkade's web & mobile app development skills as a CSE student at GGITS, Jabalpur. GGITS student with award-winning projects. contact Priyanshu for collaboration!">
+    <title>Priyanshu Urkade|GGITS</title>
   </head>
   <body>
     <div id="root"></div>
