--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover Priyanshu Urkade's web & mobile app development skills as a CSE student at GGITS, Jabalpur. GGITS student with award-winning projects. contact Priyanshu for collaboration!">
+    <meta name="description" content="Discover Priyanshu Urkade 's web & mobile app development skills as a CSE student at Gyan Ganga Institute of Technology & Sciences (GGITS), Jabalpur. GGITS student with award-winning projects. contact Priyanshu for collaboration!">
+    <meta name="copyright" content="© 2024 Priyanshu Urkade. All rights reserved.">
+    <meta name="author" content="Priyanshu Urkade">
     <title>Priyanshu Urkade | GGITS</title>
   </head>
   <body>
