Update meta description and add G tag for analytics

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover Priyanshu Urkade 's web & mobile app development skills as a CSE student at Gyan Ganga Institute of Technology & Sciences (GGITS), Jabalpur. GGITS student with award-winning projects. contact Priyanshu for collaboration!">
+    <meta name="description" content="Discover Priyanshu Urkade 's web & mobile app development skills as a CSE student at Gyan Ganga Institute of Technology & Sciences (GGITS), Jabalpur. GGITS student with Great projects. contact for collaboration!">
     <meta name="copyright" content="© 2024 Priyanshu Urkade. All rights reserved.">
     <meta name="author" content="Priyanshu Urkade">
     <title>Priyanshu Urkade | GGITS</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ887HDY0B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZ887HDY0B');
+</script>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
